<resources>
    <string name="app_name">VocabularyBook</string>
    <string name="title_text">単語帳</string>
    <string name="study_button_text">学習</string>
    <string name="addition_button_text">追加</string>

    <!--  activity_study  -->
    <string name="English_text">English</string>
    <string name="Japanese_text">Japanese</string>
    <string name="next_text">NEXT</string>
    <string name="home_text">HOME</string>

    <!--  activity_addition  -->
    <string name="english_add_text">単語登録</string>
    <string name="back_text">back</string>
    <string name="keep_text">keep</string>
</resources>