<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--タイトル-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/title_text"
        android:textSize="40sp"/>

    <!--  ボタン  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/study_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/study_button_text" />

        <Button
            android:id="@+id/addition_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/addition_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>